# potok

./: .clang-format  .gitignore  CMakeLists.txt
include/potok/: span.hpp  stdint.hpp
include/potok/hpack/: common.hpp  decode.hpp  encode.hpp  error.hpp
src/: span.cpp  stdint.cpp
src/hpack/: common.cpp  decode.cpp  encode.cpp  error.cpp
tests/: CMakeLists.txt  hpack_common.cpp  hpack_decode_integer.cpp  hpack_encode_integer.cpp  hpack_integer_representation.cpp  huffman_decode.cpp
